src/app/global.scss
// foundation settings (variables)
@import 'settings';

// foundation base
@import 'node_modules/foundation-sites/scss/foundation';

// include foundation globals
@include foundation-global-styles;

// include foundation features
@include foundation-everything(true);

// fonts & icons
@import '../fonts/roboto/Roboto.css';
@import '../fonts/space_mono/SpaceMono.css';
@import '../fonts/foundation-icons/foundation-icons.css';
@import '../fonts/ionicons/ionicons.css';

body {
  font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  height:auto;
}

body {
  overflow: auto;
  .loading-overlay { display:none; }
}

body.loading {
  overflow: hidden;
  .loading-overlay { display:flex; }
}

.loading-overlay {
  display: flex;
  position:absolute;
  top:0;
  bottom:0;
  left:0;
  right:0;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  background-color:$white;

  .text {
    font-weight: lighter;
    font-size: 17px;
  }

  .image {
    padding-bottom: 0.5em;
  }

  .progress { width:225px; height:8px; margin-top:1.5em; }
}

textarea {
  min-height: 10px !important;
}

// globally disable text selection
// (often happens by accident while dragging things)
body {
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -o-user-select: none;
  user-select: none;
}

// Loading bar
.pace {
  -webkit-pointer-events: none;
  pointer-events: none;

  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;

  z-index: 2000;
  position: fixed;
  margin: auto;
  top: 250px;
  left: 0;
  right: 0;
  bottom: 0;
  height: 7px;
  width: 360px;
  background: inherit;

  overflow: hidden;
}

.pace .pace-progress {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -ms-box-sizing: border-box;
  -o-box-sizing: border-box;
  box-sizing: border-box;

  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translate3d(0, 0, 0);
  -ms-transform: translate3d(0, 0, 0);
  -o-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);

  max-width: 360px;
  position: fixed;
  z-index: 2000;
  display: block;
  position: absolute;
  top: 0;
  right: 100%;
  height: 100%;
  width: 100%;
  background: $black;
}

.pace.pace-inactive {
  display: none;
}

